@@ -6,6 +6,8 @@ Revision history for Perl extension CPAN::SQLite.
      http://rt.cpan.org/Ticket/Display.html?id=47353
   - add Compress:Zib dependency; see
      http://rt.cpan.org/Ticket/Display.html?id=45783
+  - better error reporting in cases where index files aren't fetched; see
+      http://rt.cpan.org/Ticket/Display.html?id=47322
 
 0.197 Feb 16, 2009
   - add LWP::Simple to prerequisites of Build.PL, to help CPAN testers:
